# bluetime

./: README.md  bun.lockb  eslint.config.js  flake.nix  package.json  svelte.config.js  vite.config.ts
.zed/: settings.json
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  Tauri.toml
src-tauri/icons/: icon.icns
src-tauri/migrations/01-init/: up.sql
src-tauri/src/: db.rs  main.rs  wayland.rs
src/lib/: sidebar.svelte
src/routes/: +layout.svelte  +page.svelte
