[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.8", features = [ "window-show", "cli", "system-tray", "config-toml"] }

tokio = "1.29.1"
rusqlite = "0.31.0"
rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
tracing = "0.1.40"
lazy_static = "1.5.0"
include_dir = "0.7.4"
rupamix = "1.0.0"
mpris = "2.0.1"
smallvec = "1.13.2"
anyhow = "1.0.86"
futures = "0.3.30"
tracing-subscriber = "0.3.18"
wayland-client = "0.31.5"
wayland-protocols-wlr = { version = "0.3.3", features = ["client"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
